@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="de" xml:lang="de">
 <head>
-<!-- 2023-10-01 So 00:23 -->
+<!-- 2023-10-01 So 12:06 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Textsatz mit TeX/LaTeX</title>
@@ -22,9 +22,9 @@
 <span class="aktuell">TeX</span>  
 </p>
 
-<div id="outline-container-org68ba7e3" class="outline-2">
-<h2 id="org68ba7e3">Was ist TeX? Was ist LaTeX?</h2>
-<div class="outline-text-2" id="text-org68ba7e3">
+<div id="outline-container-orgd66c354" class="outline-2">
+<h2 id="orgd66c354">Was ist TeX? Was ist LaTeX?</h2>
+<div class="outline-text-2" id="text-orgd66c354">
 <blockquote>
 <p>
 <i>„TeX has always had a special place in my heart. We made the world a
@@ -117,9 +117,9 @@ Grafikdesign</li>
 </div>
 </div>
 
-<div id="outline-container-orgf315df3" class="outline-2">
-<h2 id="orgf315df3">CTAN</h2>
-<div class="outline-text-2" id="text-orgf315df3">
+<div id="outline-container-orga553048" class="outline-2">
+<h2 id="orga553048">CTAN</h2>
+<div class="outline-text-2" id="text-orga553048">
 <p>
 Das <i>Comprehensive TeX Archive Network</i> <a href="https://ctan.org/">CTAN</a> (sprich: zeh-tan) ist ein
 Netzwerk von Servern, über das TeX, LaTeX und die ergänzende Software
@@ -138,9 +138,9 @@ noch auf dem Portal fortgeführt wird.
 </div>
 </div>
 
-<div id="outline-container-org095f049" class="outline-2">
-<h2 id="org095f049">Installation</h2>
-<div class="outline-text-2" id="text-org095f049">
+<div id="outline-container-orgde5daa6" class="outline-2">
+<h2 id="orgde5daa6">Installation</h2>
+<div class="outline-text-2" id="text-orgde5daa6">
 <p>
 (La)TeX kann auf allen Plattformen eingesetzt werden. Benötigt werden
 eine TeX-Distribution – <a href="https://www.tug.org/texlive/">TeX&nbsp;Live</a> bzw. dessen Variante <a href="https://www.tug.org/mactex/">MacTeX</a>
@@ -205,9 +205,9 @@ WYSIWYG? preview-latex unter Emacs und andere Ansätz</a>e, in: DTK
 </div>
 </div>
 
-<div id="outline-container-org709db94" class="outline-2">
-<h2 id="org709db94">Online-Ressourcen</h2>
-<div class="outline-text-2" id="text-org709db94">
+<div id="outline-container-org8e358d9" class="outline-2">
+<h2 id="org8e358d9">Online-Ressourcen</h2>
+<div class="outline-text-2" id="text-org8e358d9">
 <p>
 Unter den Texten, die online verfügbar sind, ist die Einführung in
 LaTeX, die das <i>LaTeX Project</i> bereitstellt, grundlegend. Sie ist in
@@ -289,9 +289,9 @@ und XeLaTeX aus.
 </div>
 </div>
 
-<div id="outline-container-orgeda8828" class="outline-2">
-<h2 id="orgeda8828">Wissenschaftliche Arbeiten mit LaTeX schreiben</h2>
-<div class="outline-text-2" id="text-orgeda8828">
+<div id="outline-container-orga7656a2" class="outline-2">
+<h2 id="orga7656a2">Wissenschaftliche Arbeiten mit LaTeX schreiben</h2>
+<div class="outline-text-2" id="text-orga7656a2">
 <p>
 In meinem Topic Index zum TeX Catalogue gab es bis 2017 <a href="http://dante.ctan.org/tex-archive/obsolete/help/Catalogue/bytopic.html#humanities">eine Übersicht</a>
 über einschlägige Pakete auf CTAN für die Geisteswissenschaftlen
@@ -346,9 +346,9 @@ Mannheim, 2015. Parallel veröffentlicht in: ABI-Technik, 4/2015,
 </div>
 </div>
 
-<div id="outline-container-orgbb01ef1" class="outline-2">
-<h2 id="orgbb01ef1">Literatur</h2>
-<div class="outline-text-2" id="text-orgbb01ef1">
+<div id="outline-container-org99c8550" class="outline-2">
+<h2 id="org99c8550">Literatur</h2>
+<div class="outline-text-2" id="text-org99c8550">
 <p>
 Einen Überblick über die für <i>TeX&nbsp;&amp; Friends</i> im allerweitesten
 Sinne relevante Literatur erhält man im <i><a href="http://ftp.math.utah.edu/pub/tex/bib/index-table.html">TeX User Group bibliography
@@ -425,9 +425,9 @@ Geisteswissenschaften:
 <ul class="org-ul">
 <li>Maïeuil Rouquette:
 <a href="https://shs.hal.science/halshs-00924546">(Xe)LaTeX appliqué aux
-sciences humaine</a>s. Atramenta, Tampere, 2012, online in: Archive
-ouverte en Sciences de l&rsquo;Homme et de la Société, 2014, <a href="https://github.com/maieul/latexhumain">Quelltext auf
-GitHub</a>.</li>
+sciences humaines</a>. Atramenta, Tampere, 2012, online in: Archive
+ouverte en Sciences de l&rsquo;Homme et de la Société, 2014,
+<a href="https://github.com/maieul/latexhumain">Quelltext auf GitHub</a>.</li>
 </ul>
 
 <p>
@@ -461,9 +461,9 @@ CervanTeX (2001–2007)</li>
 </div>
 </div>
 
-<div id="outline-container-org26ca203" class="outline-2">
-<h2 id="org26ca203">Diskussion und Neuigkeiten rund um TeX und LaTeX</h2>
-<div class="outline-text-2" id="text-org26ca203">
+<div id="outline-container-org02e28be" class="outline-2">
+<h2 id="org02e28be">Diskussion und Neuigkeiten rund um TeX und LaTeX</h2>
+<div class="outline-text-2" id="text-org02e28be">
 <p>
 Wie bei jedem freien Softwareprojekt gibt es auch bei TeX eine
 Gemeinde von Entwicklern und Benutzern, die sich online zusammenfinden
