@@ -1,3 +1,7 @@
+2023-10-01  Juergen Fenn  <jfenn@gmx.net>
+
+	* l2intro.org: minor fixes, typos
+
 2023-09-27  Juergen Fenn  <jfenn@gmx.net>
 
 	* l2intro.org: add configuration für HTML export
